# napd

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
etc/napd/checks.d/: ssh.check
etc/napd/processes.d/: vlc.process
etc/napd/units.d/: apache2.unit
etc/systemd/system/: napd.service
lib/napd/: napd.conf
lib/napd/scripts/: ssh.sh
src/: Base.pro  Common.pri
src/app/: app.pro  main.cpp
src/lib/: CheckedProcesses.cpp  CheckedProcesses.h  CheckedUnits.cpp  CheckedUnits.h  CustomChecks.cpp  CustomChecks.h  DBusManager.cpp  DBusManager.h  MainThread.cpp  MainThread.h  NapDaemon.cpp  NapDaemon.h  NotReadyException.h  PowerManager.cpp  PowerManager.h  ProcessHandler.cpp  ProcessHandler.h  Settings.cpp  Settings.h  Setup.cpp  Setup.h  lib.pro
src/lib/checkable/: Checkable.h  CustomCheck.h  PID.h  Process.h  Unit.h
src/lib/collection/: CheckedPIDs.cpp  CheckedPIDs.h  CheckedProcesses.cpp  CheckedProcesses.h  CheckedUnits.cpp  CheckedUnits.h  Collection.h  CustomChecks.cpp  CustomChecks.h
src/napctl/: MessageListener.cpp  MessageListener.h  NapCtl.cpp  NapCtl.h  main.cpp  napctl.pro
